--- a/index.html
+++ b/index.html
@@ -25,53 +25,16 @@
     <main>
       <div class="outer-container">
 	<div class="row">
-		<div class="parallax-container">
-				<div class="parallax"><img src="Parallax/mosaic2.png" style="transform: translate3d(-50%, 611px, 0px); display: block;"></div>
-		</div>
 		<div class="section white">
 			<div class="row container">
 				<h1 class="header">The Emotional Captcha: </h1>
 				<h4 class="header sub-header"><small> What's More <big>Human</big> than <big>Emotion</big>?</small></h4>
 			</div>
 		</div>
-		<div class="parallax-container">
-			<div class="parallax"><img src="Parallax/mosaic.png" style="transform: translate3d(-50%, 587px, 0px); display: block;"></div>
-		</div>
-		<a class="btn-floating btn-large waves-effect waves-light down-btn red" id="down-emotcha"><i class="mdi-hardware-keyboard-arrow-down"></i></a>
 	</div>
 
 	<div class="emotcha-container" ,="" id="emotcha-target">
 		<div class="row">
-			<div class="col s12 m4 example-col">
-				<div class="card picture-card example-card">
-					<div class="card-image">
-						<img id="example-img" ,="" src="images/happy4.jpg">
-					</div>
-					<div class="card-content">
-						<div class="emotions">
-							<div class="progress">
-								<div id="ex-angry" ,="" class="determinate" style="width: 0.531718%;"> Angry </div>
-							</div>
-							<div class="progress">
-								<div id="ex-sad" ,="" class="determinate" style="width: 2.6397%;"> Sad </div>
-							</div>
-							<div class="progress">
-								<div id="ex-neutral" ,="" class="determinate" style="width: 1.37852%;"> Neutral </div>
-							</div>
-							<div class="progress">
-								<div id="ex-surprise" ,="" class="determinate" style="width: 0.381204%;"> Surprise </div>
-							</div>
-							<div class="progress">
-								<div id="ex-fear" ,="" class="determinate" style="width: 1.09189%;"> Fear </div>
-							</div>
-							<div class="progress">
-								<div id="ex-happy" ,="" class="determinate" style="width: 93.977%;"> Happy </div>
-							</div>
-						</div>
-						<a class="btn-floating btn-large waves-effect waves-light next-btn red"><i class="mdi-content-forward"></i></a>
-					</div>
-				</div>
-			</div>
 
 			<div class="col s12 m4 live-col">
 				<div class="card picture-card live-card">
@@ -99,49 +62,11 @@
 								<div id="lv-happy" ,="" class="determinate" style="width: 1%"> Happy </div>
 							</div>
 						</div>
-						<a class="btn-floating btn-large waves-effect waves-light submit-btn red"><i class="mdi-av-play-arrow"></i></a>
+						<a class="btn-floating btn-large waves-effect waves-light submit-btn red" id="submitBtn"><i class="mdi-av-play-arrow"></i></a>
 					</div>
 				</div>
 			</div>
 
-			<div class="col s12 m4 login-col">
-				<div class="card explain-card">
-					<div class="row">
-						<div class="col s12">
-							<h5> Welcome to Emotcha</h5>
-							<br>
-							<p>This a proof concept demo of a captcha system built of a truly human characteristic, emotions. Try and match your emotional profile with the one to the left inorder to unlock the mock login form below.</p>
-							<p>Emotcha is built off of <a href="https://indico.io/" ,="" target="_blank">indico.io's</a> facial emotional recognition api and is made under a MIT license. The source can be found <a href="https://github.com/jagreene/Emotcha" ,="" target="_blank">here</a>, happy authentication!</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="card login-card">
-					<div class="card-content">
-						<div class="row">
-							<div class="input-field col s12">
-								<input value="johndoe@gmail.com" id="email" type="email" readonly="">
-								<label for="email" class="active">Email</label>
-							</div>
-						</div>
-						<div class="row">
-							<div class="input-field col s12">
-								<input value="sa;lfjasdf" id="password" type="password" readonly="">
-								<label for="password" class="active">Password</label>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col s12">
-								<a class="waves-effect waves-light btn login-btn disabled">Log In</a>
-							</div>
-						</div>
-						<div class="how-to card red">
-							<h6 class="center" style="margin-top:10px, margin-bottom: 10px"> Match Emotions to Enable Log In </h6>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
 	</div>
 </div>
 
@@ -156,10 +81,10 @@
 
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="javascripts/materialize.js"></script>
+    <script type="text/javascript" src="public/javascripts/materialize.js"></script>
      <script src="https://cdn.rawgit.com/jaysalvat/jquery.facedetection/master/dist/jquery.facedetection.min.js"></script>
-     <script type="text/javascript" src="javascripts/jquery.smooth-scroll.min.js"></script>
-     <script type="text/javascript" src="javascripts/main.js"></script>
+     <script type="text/javascript" src="public/javascripts/jquery.smooth-scroll.min.js"></script>
+     <script type="text/javascript" src="public/javascripts/main.js"></script>
   
 
 <div class="hiddendiv common"></div></body></html>
