--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
      <script src="https://cdn.rawgit.com/jaysalvat/jquery.facedetection/master/dist/jquery.facedetection.min.js"></script>
      <script type="text/javascript" src="public/javascripts/jquery.smooth-scroll.min.js"></script>
      <script type="text/javascript" src="public/javascripts/main.js"></script>
+	 <script type="text/javascript" src="routes/index.js"></script>
   
 
 <div class="hiddendiv common"></div></body></html>
