--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<div id="lv-happy" ,="" class="determinate" style="width: 1%"> Happy </div>
 							</div>
 						</div>
-						<a class="btn-floating btn-large waves-effect waves-light submit-btn red" id="submitBtn"><i class="mdi-av-play-arrow"></i></a>
+						<a class="btn-floating btn-large waves-effect waves-light submit-btn red" id="snap"><i class="mdi-av-play-arrow"></i></a>
 					</div>
 				</div>
 			</div>
