--- a/index.html
+++ b/index.html
@@ -1,91 +1,113 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<html><head>
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="public/css/materialize.css" media="screen,projection">
+<head>
 
-    <link type="text/css" rel="stylesheet" href="public/css/main.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  </head>
+    <title>InsideAud.io</title>
 
-  <body>
-    <header>
-      <div class="navbar-fixed">
-        <nav>
-          <div class="nav-wrapper">
-            <div class="container">
-              <a href="#" class="brand-logo">Emotcha</a>
+    <!-- Bootstrap Core CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+
+    <!-- Custom Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+
+    <!-- Plugin CSS -->
+    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/creative.css" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body id="page-top">
+
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">INSIDE AUD</a>
             </div>
-          </div>
-        </nav>
-      </div>
-    </header>
 
-    <main>
-      <div class="outer-container">
-	<div class="row">
-		<div class="section white">
-			<div class="row container">
-				<h1 class="header">The Emotional Captcha: </h1>
-				<h4 class="header sub-header"><small> What's More <big>Human</big> than <big>Emotion</big>?</small></h4>
-			</div>
-		</div>
-	</div>
-
-	<div class="emotcha-container" ,="" id="emotcha-target">
-		<div class="row">
-
-			<div class="col s12 m4 live-col">
-				<div class="card picture-card live-card">
-					<div class="card-image">
-						<video width="600" ,="" height="450" autoplay=""></video>
-					</div>
-					<div class="card-content">
-						<div class="emotions">
-							<div class="progress">
-								<div id="lv-angry" ,="" class="determinate" style="width: 1%"> Angry </div>
-							</div>
-							<div class="progress">
-								<div id="lv-sad" ,="" class="determinate" style="width: 1%"> Sad </div>
-							</div>
-							<div class="progress">
-								<div id="lv-neutral" ,="" class="determinate" style="width: 1%"> Neutral </div>
-							</div>
-							<div class="progress">
-								<div id="lv-surprise" ,="" class="determinate" style="width: 1%"> Surprise </div>
-							</div>
-							<div class="progress">
-								<div id="lv-fear" ,="" class="determinate" style="width: 1%"> Fear </div>
-							</div>
-							<div class="progress">
-								<div id="lv-happy" ,="" class="determinate" style="width: 1%"> Happy </div>
-							</div>
-						</div>
-						<a class="btn-floating btn-large waves-effect waves-light submit-btn red" id="submitBtn"><i class="mdi-av-play-arrow"></i></a>
-					</div>
-				</div>
-			</div>
-
-	</div>
-</div>
-
-    </main>
-
-    <footer class="page-footer">
-      <div class="footer-copyright">
-        <div class="container">
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#services">Sign up</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-      </div>
-    </footer>
+        <!-- /.container-fluid -->
+    </nav>
 
-    <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="public/javascripts/materialize.js"></script>
-     <script src="https://cdn.rawgit.com/jaysalvat/jquery.facedetection/master/dist/jquery.facedetection.min.js"></script>
-     <script type="text/javascript" src="public/javascripts/jquery.smooth-scroll.min.js"></script>
-     <script type="text/javascript" src="public/javascripts/main.js"></script>
-	 <script type="text/javascript" src="routes/index.js"></script>
-  
+    <header>
+        <div class="header-content">
+            <div class="header-content-inner">
+                <img src="img/logo.png" style="width:300px;height:200px;">
+                <hr>
+                <p>Log in with facebook</p>
+                  <div class="wow fadeInLeft">
+                      <div class="row">
+                          <div class="col-md-4 col-md-offset-4">
+                            <div class="form-group">
+                              <input type="text" name="username" id="userName" class="form-control input-lg" placeholder="Username or Email" tabindex="1">
+                            </div>
+                          </div>
+                      </div>
+                      <div class="row">
+                          <div class="col-md-4 col-md-offset-4">
+                              <div class="form-group">
+                                <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password" tabindex="2">
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                <a href="selfie.html" class="btn btn-primary btn-xl page-scroll">Enter!</a>
+            </div>
+        </div>
+    </header>
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
 
-<div class="hiddendiv common"></div></body></html>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/jquery.fittext.js"></script>
+    <script src="js/wow.min.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/creative.js"></script>
+
+</body>
+
+</html>
